--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .polygon-right-point {
+    clip-path: polygon(0% 0%, 100% 0, 82% 50%, 100% 100%, 0% 100%);
+  }
+  .polygon-left-point {
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%, 18% 50%);
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .parent:hover .child {
     opacity: 1;
